History & Changelog
===================

Version 3.1
 - added:    parsing of contacts and messages from nfb & nfc backups
 - fixed:    xml encoding during export of messages for android
 - fixed:    ignoring of predefmessages as message source

Version 3.0
 - added:    dbshell integration for parsing contacts and other info from symbian databases
 - added:    preferences allowing selection of message sources (VMG, predefmessages,
             symbian message storage)
 - added:    new export format "SMS Backup & Restore" for messages, which allows
             android users to migrate their messages from nokia backups easily
 - improved: advanced options for installer
 - fixed:    parsing robustness fixes

Version 2.6
 - added:    extract files by drag & drop (for example on desktop)
 - added:    applying found phonebook entries on messages found in nbf backups
 - added:    extracted *.mms files can be opened individually
 - fixed:    fixes in mms parsing
 - added:    first version distibuted with installer (later)

Version 2.5
 - added:    new folder structure type (using zip compression) parsing,
             this structure can be found in backups from new models
 - fixed:    time of sent messages from "predefmessages" storage

Version 2.4
 - added:    new backup format (nbf) support. Actually nbf is nothing more than
             plain zip archive, so as a side effect, support for zip files has
             been added too. You can use NbuExplorer as "unzip with preview"
             tool now if you like
 - added:    new message format decoding (storage which is typically under
             "predefmessages" system folder). This format decoding is used
             for preview purposes but also for load of Messages tab content
             during nbf backup format parsing
 - added:    author email link added to About application dialog

Version 2.3
 - fixed:    group parsing
 - added:    experimental (not perfect, but somehow working) parsing of messages